array.island.Island.scala.error
Compilation error:
Island:8: error: reassignment to val
    x=a
     ^