array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var a : Int = num(0)
  var compteur : Int = 0
  for (x <- num) {
    if (x > a) {
      compteur = compteur + 1
    x=a
    }   	
  }
  return compteur
}